--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -8,8 +8,8 @@
   "angularCompilerOptions": {
     "enableIvy": false
   },
-  "exclude": [
-    "test.ts",
-    "**/*.spec.ts"
+  "files": [
+    "main.ts",
+    "polyfills.ts"
   ]
 }
