--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -6,7 +6,7 @@
     "allowSyntheticDefaultImports": true
   },
   "angularCompilerOptions": {
-    "enableIvy": false
+    "enableIvy": true
   },
   "files": [
     "main.ts",
