--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -18,8 +19,8 @@
     "@angular/core": "^9.0.0",
     "@angular/flex-layout": "^9.0.0-beta.29",
     "@angular/forms": "^9.0.0",
-    "@angular/material": "^8.2.3",
-    "@angular/material-moment-adapter": "^8.2.3",
+    "@angular/material": "^9.0.0",
+    "@angular/material-moment-adapter": "^9.0.0",
     "@angular/platform-browser": "^9.0.0",
     "@angular/platform-browser-dynamic": "^9.0.0",
     "@angular/router": "^9.0.0",
@@ -31,9 +32,8 @@
     "@ngrx/router-store": "^8.6.0",
     "@ngrx/store": "^8.6.0",
     "@ngrx/store-devtools": "^8.6.0",
-    "core-js": "^3.6.2",
+    "core-js": "^3.6.4",
     "crypto-js": "^3.1.9-1",
-    "hammerjs": "^2.0.8",
     "html2canvas": "^1.0.0-rc.5",
     "jspdf": "^1.5.3",
     "moment": "^2.24.0",
@@ -48,9 +48,9 @@
     "@angular/compiler-cli": "^9.0.0",
     "@angular/language-service": "^9.0.0",
     "@ngrx/schematics": "^8.6.0",
-    "@types/jasmine": "^3.4.6",
+    "@types/jasmine": "^3.5.3",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.12.26",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -58,8 +58,8 @@
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.5.1",
-    "protractor": "~5.4.0",
+    "karma-jasmine-html-reporter": "^1.5.2",
+    "protractor": "~5.4.3",
     "ts-node": "~8.4.1",
     "tslint": "^5.20.1",
     "typescript": "3.7.5"
