--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@angular/platform-browser": "^9.0.0",
     "@angular/platform-browser-dynamic": "^9.0.0",
     "@angular/router": "^9.0.0",
-    "@ckeditor/ckeditor5-angular": "^1.1.2",
+    "@ckeditor/ckeditor5-angular": "^1.2.3",
     "@ckeditor/ckeditor5-build-classic": "^16.0.0",
     "@ngrx/data": "^8.6.0",
     "@ngrx/effects": "^8.6.0",
@@ -46,6 +46,7 @@
     "jspdf": "^1.5.3",
     "material-design-icons": "^3.0.1",
     "moment": "^2.24.0",
+    "ng-form-group": "^1.4.2",
     "ngx-spinner": "^8.1.0",
     "normalize.css": "^8.0.1",
     "rxjs": "^6.5.4",
