--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "crypto-js": "^3.1.9-1",
     "html2canvas": "^1.0.0-rc.5",
     "jspdf": "^1.5.3",
+    "mapbox-gl": "^1.11.0",
     "material-design-icons": "^3.0.1",
     "moment": "^2.24.0",
     "ng-form-group": "^1.4.2",
@@ -54,7 +55,7 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.1",
+    "@angular-devkit/build-angular": "^0.901.8",
     "@angular/cli": "^9.0.1",
     "@angular/compiler-cli": "^9.1.2",
     "@angular/language-service": "^9.1.2",
