--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "om-dev": "ng serve -o --port 999 -c omDev",
     "om-prod": "ng serve -o --port 999 -c omProd",
     "om-test": "ng serve -o --port 999 -c omTest",
-    "build": "ng build --prod --base-href ./",
+    "build": "ng build --prod --aot --base-href ./",
     "build-eg-local": "ng build -c egLocal --base-href ./",
     "build-om-dev": "ng build -c omDev --base-href ./",
     "build-om-prod": "ng build -c omProd --base-href ./",
@@ -20,62 +20,62 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.0.0",
-    "@angular/cdk": "^9.2.4",
-    "@angular/common": "^9.1.12",
-    "@angular/compiler": "^9.1.12",
-    "@angular/core": "^9.1.12",
-    "@angular/flex-layout": "^9.0.0-beta.31",
-    "@angular/forms": "^9.1.12",
-    "@angular/material": "^9.2.4",
-    "@angular/material-moment-adapter": "^9.2.4",
-    "@angular/platform-browser": "^9.1.12",
-    "@angular/platform-browser-dynamic": "^9.1.12",
-    "@angular/router": "^9.1.12",
+    "@angular/animations": "~10.0.3",
+    "@angular/cdk": "^10.0.1",
+    "@angular/common": "^10.0.3",
+    "@angular/compiler": "^10.0.3",
+    "@angular/core": "^10.0.3",
+    "@angular/flex-layout": "^10.0.0-beta.32",
+    "@angular/forms": "^10.0.3",
+    "@angular/material": "^10.0.1",
+    "@angular/material-moment-adapter": "^10.0.1",
+    "@angular/platform-browser": "^10.0.3",
+    "@angular/platform-browser-dynamic": "^10.0.3",
+    "@angular/router": "^10.0.3",
     "@ckeditor/ckeditor5-angular": "^1.2.3",
-    "@ckeditor/ckeditor5-build-classic": "^16.0.0",
-    "@ngrx/data": "^8.6.0",
-    "@ngrx/effects": "^8.6.0",
-    "@ngrx/entity": "^8.6.0",
-    "@ngrx/router-store": "^8.6.0",
-    "@ngrx/store": "^8.6.0",
-    "@ngrx/store-devtools": "^8.6.0",
+    "@ckeditor/ckeditor5-build-classic": "^20.0.0",
+    "@ngrx/data": "^9.2.0",
+    "@ngrx/effects": "^9.2.0",
+    "@ngrx/entity": "^9.2.0",
+    "@ngrx/router-store": "^9.2.0",
+    "@ngrx/store": "^9.2.0",
+    "@ngrx/store-devtools": "^9.2.0",
     "core-js": "^3.6.5",
-    "crypto-js": "^3.1.9-1",
+    "crypto-js": "^4.0.0",
     "html2canvas": "^1.0.0-rc.5",
     "jspdf": "^1.5.3",
     "mapbox-gl": "^1.11.1",
     "material-design-icons": "^3.0.1",
     "moment": "^2.27.0",
     "ng-form-group": "^1.4.2",
-    "ngx-spinner": "^8.1.0",
+    "ngx-spinner": "^9.0.2",
     "normalize.css": "^8.0.1",
     "rxjs": "^6.6.0",
-    "tslib": "^1.13.0",
+    "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.901.10",
-    "@angular/cli": "^9.1.10",
-    "@angular/compiler-cli": "^9.1.12",
-    "@angular/language-service": "^9.1.12",
-    "@ngrx/schematics": "^8.6.0",
+    "@angular-devkit/build-angular": "^0.1000.1",
+    "@angular/cli": "^10.0.1",
+    "@angular/compiler-cli": "^10.0.3",
+    "@angular/language-service": "^10.0.3",
+    "@ngrx/schematics": "^9.2.0",
     "@types/jasmine": "^3.5.11",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.12.48",
-    "@typescript-eslint/eslint-plugin": "^2.34.0",
-    "@typescript-eslint/parser": "^2.34.0",
-    "codelyzer": "^5.1.2",
-    "eslint": "^6.8.0",
+    "@types/node": "^14.0.20",
+    "@typescript-eslint/eslint-plugin": "^3.6.0",
+    "@typescript-eslint/parser": "^3.6.0",
+    "codelyzer": "^6.0.0",
+    "eslint": "^7.4.0",
     "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~4.2.1",
+    "jasmine-spec-reporter": "~5.0.2",
     "karma": "^5.1.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "^2.1.1",
-    "karma-jasmine": "~2.0.1",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
+    "karma-jasmine": "~3.3.1",
     "karma-jasmine-html-reporter": "^1.5.4",
     "protractor": "^7.0.0",
-    "ts-node": "~8.4.1",
-    "typescript": "3.7.5"
+    "ts-node": "~8.10.2",
+    "typescript": "3.9.6"
   }
 }
