--- a/angular.json
+++ b/angular.json
@@ -44,7 +44,7 @@
             "production": {
               "fileReplacements": [
                 {
-                  "replfilesace": "src/environments/environment.ts",
+                  "replace": "src/environments/environment.ts",
                   "with": "src/environments/environment.prod.ts"
                 }
               ],
@@ -149,6 +149,10 @@
               "**/node_modules/**"
             ]
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {}
         }
       }
     },
