--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@ngrx/router-store": "^9.2.0",
     "@ngrx/store": "^9.2.0",
     "@ngrx/store-devtools": "^9.2.0",
+    "angular-cli-ghpages": "^0.6.2",
     "core-js": "^3.6.5",
     "crypto-js": "^4.0.0",
     "html2canvas": "^1.0.0-rc.5",
