--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "eg-local": "ng serve -o --port 999 -c egLocal",
     "om-dev": "ng serve -o --port 999 -c omDev",
     "om-prod": "ng serve -o --port 999 -c omProd",
@@ -17,6 +17,11 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
+  },
+  "heroku-postbuild": "ng build --prod",
+  "engines": {
+    "node": "12.15.0",
+    "npm": "6.14.6"
   },
   "private": true,
   "dependencies": {
@@ -43,6 +48,7 @@
     "angular-cli-ghpages": "^0.6.2",
     "core-js": "^3.6.5",
     "crypto-js": "^4.0.0",
+    "express": "^4.17.1",
     "html2canvas": "^1.0.0-rc.5",
     "jspdf": "^1.5.3",
     "mapbox-gl": "^1.11.1",
@@ -53,6 +59,7 @@
     "normalize.css": "^8.0.1",
     "rxjs": "^6.6.0",
     "tslib": "^2.0.0",
+    "typescript": "3.9.6",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
