--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ script:
 deploy:
   skip_cleanup: true
   provider: heroku
-  api_key: "secure api key"
+  api_key:
+    secure: "YOUR ENCRYPTED API KEY"
   on:
     all_branches: true
